smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/byte-strings/invalid-hex-escape.smithy
// Syntax error at line 4, column 16: Error parsing byte string: Invalid unclosed hex escape found in string | Model
namespace smithy.example

@documentation(b"\x0")
string MyString
